--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,11 @@
 hs_err_pid*
 
 
+.idea/
+SearchIP.iml
+src/main/resources/
+target/generated-sources/
+target/generated-test-sources/
+target/maven-archiver/
+target/maven-status/
+target/surefire-reports/
